# flask-auth

./: .gitignore  Dockerfile  DockerfileForTests  auth.postman_collection  docker-compose-tests.yaml  docker-compose.yaml  readme.md  requirements.txt  schema.sql
nginx/: nginx.conf  site.conf
src/: .env  .env.example  access_level.py  alembic.ini  app.py  data.db  db.py  entrypoint-tests.sh  entrypoint.sh  manage.py  pyproject.toml  pywsgi.py  requirements.txt  security.py  wsgi_app.py
src/alembic/: env.py
src/alembic/versions/: 0be611504f88_initial_migration.py  16ef749da416_added_auth_history_table.py  33be719a8f0c_added_social_accounts_table.py  fe82f6c897db_added_social_accounts_table.py
src/core/: config.py  const.py  tracer.py
src/database/: redis_db.py
src/initial/: database.py  jwt.py  oauth.py  routes.py  swagger.py
src/models/: film.py  user.py
src/resources/: auth.py  role.py  role_user.py  user.py
src/services/: auth.py  permissions.py  user.py
src/services/v1/: film.py  user.py
tests/functional/: conftest.py  test_api.py  test_api_change_password.py  test_api_login.py  test_api_logout.py  test_api_refresh.py  test_api_register.py  test_api_validate.py
